--- a/firebase.json
+++ b/firebase.json
@@ -7,12 +7,18 @@
     "indexes": "firestore.indexes.json"
   },
   "functions": {
-    "predeploy": ["npm --prefix \"$RESOURCE_DIR\" run lint"]
+    "predeploy": [
+      "npm --prefix \"$RESOURCE_DIR\" run lint"
+    ],
+    "source": "functions"
   },
   "hosting": {
-    "site": "bowoot-test123",
-    "public": "build",
-    "ignore": ["firebase.json", "**/.*", "**/node_modules/**"],
+    "public": "public",
+    "ignore": [
+      "firebase.json",
+      "**/.*",
+      "**/node_modules/**"
+    ],
     "rewrites": [
       {
         "source": "**",
@@ -24,5 +30,3 @@
     "rules": "storage.rules"
   }
 }
-
-//firebase deploy --only hosting:bowoot-test123
