--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "fa-icons": "^0.1.7",
-    "firebase": "^6.4.2",
+    "firebase": "^6.6.2",
     "firebase-admin": "^8.6.0",
     "firebase-tools": "^7.6.1",
     "firebaseui": "^4.2.0",
@@ -82,6 +82,7 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.0.0",
+    "eslint-plugin-promise": "^6.1.1",
     "react-hot-loader": "^4.12.12"
   }
 }
