--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "butter-toast": "^3.3.3",
     "connected-react-router": "^6.5.2",
     "cors": "^2.8.5",
+    "eslint-config-react-app": "^7.0.1",
     "express": "^4.17.1",
     "fa-icons": "^0.1.7",
     "firebase": "^6.4.2",
@@ -65,9 +66,6 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
   "browserslist": {
     "production": [
       ">0.2%",
@@ -82,6 +80,10 @@
   },
   "devDependencies": {
     "@babel/preset-react": "^7.0.0",
+    "eslint": "^5.16.0",
+    "eslint-plugin-flowtype": "^8.0.3",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-promise": "^6.1.1",
     "react-hot-loader": "^4.12.12"
   }
 }
